--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
-  "name": "website-starter-pack",
+  "name": "daniel-stoica-website",
   "version": "1.0.0",
-  "description": "Starter pack for building websites using gulp & postcss.",
+  "description": "Daniel Stoica Website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "gh-pages -d dist"
   },
-  "keywords": [
-    "gulp",
-    "postcss",
-    "web",
-    "development"
-  ],
   "author": "Daniel Stoica",
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^9.1.3",
     "cssnano": "^4.1.0",
+    "gh-pages": "^1.2.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^4.1.0",
@@ -24,5 +19,6 @@
     "gulp-sass": "^4.0.1",
     "gulp-uglify": "^3.0.1",
     "rucksack-css": "^1.0.2"
-  }
+  },
+  "dependencies": {}
 }
