--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-postcss": "^8.0.0",
     "gulp-sass": "^4.0.1",
     "gulp-uglify": "^3.0.1",
+    "gulp-uglify-es": "^1.0.4",
     "rucksack-css": "^1.0.2"
   },
   "dependencies": {}
